--- a/style/parts/weare.scss
+++ b/style/parts/weare.scss
@@ -1,5 +1,5 @@
 .weare {
-    background: url('/images/weare/best_bg.png') center center / cover no-repeat;
+    background: url('./images/weare/best_bg.png') center center / cover no-repeat;
 }
 
 .weare__container {
