--- a/style/parts/burger_menu.css
+++ b/style/parts/burger_menu.css
@@ -1,5 +1,5 @@
 .bgmenu {
-  background: url("/images/menu/menu_back.png") center center/cover no-repeat;
+  background: url("./images/menu/menu_back.png") center center/cover no-repeat;
   position: relative;
   display: flex; }
 
@@ -48,13 +48,13 @@
     writing-mode: vertical-lr; }
 
 .meat {
-  background: url("/images/menu/meat_lovers.png") center center/cover no-repeat; }
+  background: url("./images/menu/meat_lovers.png") center center/cover no-repeat; }
 
 .vegan {
-  background: url("/images/menu/vegan.png") center center/cover no-repeat; }
+  background: url("./images/menu/vegan.png") center center/cover no-repeat; }
 
 .diet {
-  background: url("/images/menu/diet.png") center center/cover no-repeat; }
+  background: url("./images/menu/diet.png") center center/cover no-repeat; }
 
 .bgmenu__desc {
   display: flex;
