--- a/style/parts/delivery.scss
+++ b/style/parts/delivery.scss
@@ -1,5 +1,5 @@
 .delivery {
-    background: url('./images/order/order_back.png') center center / cover no-repeat;
+    background: url('../images/order/order_back.png') center center / cover no-repeat;
     position: relative;
 }
 
