--- a/style/parts/burger_menu.scss
+++ b/style/parts/burger_menu.scss
@@ -1,5 +1,5 @@
 .bgmenu {
-    background: url('../images/menu/menu_back.png') center center / cover no-repeat;
+    background: url('/images/menu/menu_back.png') center center / cover no-repeat;
     position: relative;
     display: flex;
     //justify-content: flex-end;
@@ -62,15 +62,15 @@ margin-left: 4%;}
 
 
 .meat {
-    background: url('../images/menu/meat_lovers.png')center center / cover no-repeat;
+    background: url('/images/menu/meat_lovers.png')center center / cover no-repeat;
 }
 
 .vegan {
-    background: url('../images/menu/vegan.png')center center / cover no-repeat;
+    background: url('/images/menu/vegan.png')center center / cover no-repeat;
 }
 
 .diet {
-    background: url('../images/menu/diet.png')center center / cover no-repeat;
+    background: url('/images/menu/diet.png')center center / cover no-repeat;
 }
 
 
