--- a/style/parts/team.scss
+++ b/style/parts/team.scss
@@ -1,5 +1,5 @@
 .team {
-    background: url('../images/team/team.png') center center / cover no-repeat;
+    background: url('/images/team/team.png') center center / cover no-repeat;
     position: relative;
 }
 
