--- a/style/main.css
+++ b/style/main.css
@@ -391,27 +391,27 @@ template {
 
 @font-face {
   font-family: 'Gagalin-Regular';
-  src: url("/fonts/Gagalin-Regular.otf");
+  src: url("../fonts/Gagalin-Regular.otf");
   font-weight: normal;
   font-style: normal; }
 @font-face {
   font-family: 'Lifehack-Medium';
-  src: url("/fonts/Lifehack_Medium.otf");
+  src: url("../fonts/Lifehack_Medium.otf");
   font-weight: normal;
   font-style: normal; }
 @font-face {
   font-family: 'Ubuntu';
-  src: url("/fonts/Ubuntu-Light.ttf");
+  src: url("../fonts/Ubuntu-Light.ttf");
   font-weight: 300;
   font-style: normal; }
 @font-face {
   font-family: 'Ubuntu';
-  src: url("/fonts/Ubuntu-Medium.ttf");
+  src: url("../fonts/Ubuntu-Medium.ttf");
   font-weight: 500;
   font-style: normal; }
 @font-face {
   font-family: 'Ubuntu';
-  src: url("/fonts/Ubuntu-B.ttf");
+  src: url("../fonts/Ubuntu-B.ttf");
   font-weight: bold;
   font-style: normal; }
 html,
@@ -524,7 +524,7 @@ footer {
   font-weight: 300; }
 
 .intro {
-  background: url("/images/intro/header_salad_background.png") center center/cover no-repeat;
+  background: url("../images/intro/header_salad_background.png") center center/cover no-repeat;
   position: relative; }
 
 .intro_container {
@@ -749,7 +749,7 @@ footer {
   left: 50%; }
 
 .team {
-  background: url("/images/team/team.png") center center/cover no-repeat;
+  background: url("../images/team/team.png") center center/cover no-repeat;
   position: relative; }
 
 .team__menu {
@@ -878,7 +878,7 @@ input:checked ~ .team__desc {
     -webkit-transform: rotate(180deg);
     transform: rotate(180deg); } }
 .bgmenu {
-  background: url("/images/menu/menu_back.png") center center/cover no-repeat;
+  background: url("../images/menu/menu_back.png") center center/cover no-repeat;
   position: relative;
   display: flex; }
 
@@ -957,7 +957,7 @@ input:checked ~ .team__desc {
   overflow: hidden; }
 
 .delivery {
-  background: url("/images/order/order_back.png") center center/cover no-repeat;
+  background: url("../images/order/order_back.png") center center/cover no-repeat;
   position: relative; }
 
 INPUT.checkbox,
