--- a/style/parts/intro.scss
+++ b/style/parts/intro.scss
@@ -1,5 +1,5 @@
 .intro {
-    background: url('/images/intro/header_salad_background.png') center center / cover no-repeat;
+    background: url('../images/intro/header_salad_background.png') center center / cover no-repeat;
     position: relative;
 }
 
