--- a/style/parts/header.css
+++ b/style/parts/header.css
@@ -11,9 +11,13 @@
   text-align: center; }
 
 .header__logo {
-  padding-top: 12px; }
+  padding-top: torem(12px); }
 
 .header__order {
-  margin-left: 15px; }
+  margin-left: torem(15px); }
+
+.header__links {
+  display: flex;
+  align-items: baseline; }
 
 /*# sourceMappingURL=header.css.map */
