--- a/style/parts/menu.scss
+++ b/style/parts/menu.scss
@@ -1,4 +1,4 @@
-.menu{display: flex;flex-direction: row;justify-content: flex-end;align-items: center;}
+.menu{display: flex;flex-direction: row;justify-content: flex-end;align-items: center; @include tablets{display:none;}}
 
 .menu__list {
     display: flex;
@@ -6,22 +6,22 @@
   }
 
 .menu__item{
-    margin-right: 15px;
+    margin-right: torem(15px);
     display: flex;
     align-items: center;
     font-family: 'Ubuntu';
     font-weight: 500;
-    font-size: 13px;
+    font-size: torem(13px);
     text-transform: uppercase;
     
     &:after {
       content: "";
       display: block;
-      width: 4px;
-      height: 4px;
+      width: torem(4px);
+      height: torem(4px);
       background: #fff;
       border-radius: 50%;
-      margin-left: 15px;
+      margin-left: torem(15px);
     }
   
     &:last-child {
@@ -34,7 +34,7 @@
   }
 
   .menu__ref {
-    font-size: 13px;
+    font-size: torem(13px);
     color: #fff;
     text-transform: uppercase;
   }
