--- a/style/main.css
+++ b/style/main.css
@@ -1137,6 +1137,9 @@ input.checkball {
   font-weight: 400;
   text-align: center;
   margin-bottom: 2.625rem; }
+  @media screen and (max-width: 768px) {
+    .delivery_h {
+      margin-bottom: 1.25rem; } }
   @media screen and (max-width: 480px) {
     .delivery_h {
       font-size: 3.125rem;
@@ -1180,6 +1183,9 @@ input.checkball {
   margin-bottom: 0.9375rem;
   display: flex;
   justify-content: space-between; }
+  @media screen and (max-width: 768px) {
+    .form__row {
+      margin-bottom: 0.5625rem; } }
 
 .form__block {
   padding-right: 1.5625rem;
