--- a/style/parts/delivery.scss
+++ b/style/parts/delivery.scss
@@ -31,6 +31,9 @@ input.checkball {
     font-weight: 400;
     text-align: center;
     margin-bottom:torem(42px);
+    @include tablets{
+        margin-bottom: torem(20px);    
+    }
     @include phones{font-size: torem(50px);
         margin-bottom:torem(20px);
     max-width: 50%;}
@@ -75,6 +78,9 @@ input.checkball {
     margin-bottom: torem(15px);
     display: flex;
     justify-content: space-between;
+    @include tablets{
+        margin-bottom: torem(9px);    
+    }
 }
 
 .form__block {
