--- a/style/parts/footer.css
+++ b/style/parts/footer.css
@@ -1,7 +1,7 @@
 .footer__container {
   display: flex;
   width: 100%;
-  background: url("/images/contacts/footer_bg.png") center center/cover no-repeat;
+  background: url("../images/contacts/footer_bg.png") center center/cover no-repeat;
   position: absolute;
   bottom: torem(0px);
   justify-content: space-around; }
