--- a/style/parts/burger_menu.css
+++ b/style/parts/burger_menu.css
@@ -1,80 +1,69 @@
-.bgmenu {
-  background: url("../images/menu/menu_back.png") center center/cover no-repeat;
-  position: relative;
-  display: flex; }
+/*
+Error: Undefined mixin 'tablets'.
+        on line 101 of C:\Users\mrfox\Documents\burger\style\parts\burger_menu.scss, in `tablets'
+        from line 101 of C:\Users\mrfox\Documents\burger\style\parts\burger_menu.scss
 
-.testetest {
-  display: flex;
-  height: 100%;
-  width: 100%; }
+96: }
+97: 
+98: .active_bg {
+99:     width: torem(540px);
+100:     overflow: hidden;
+101:     @include tablets{
+102:         width:torem(530px);
+103:     }
+104: 
+105:     @include phones{
+106:         width:torem(240px);
 
-.bgmenu__header {
-  color: #ffffff;
-  font-family: 'Gagalin-Regular';
-  font-size: 72px;
-  font-weight: 400;
-  margin-top: 3%;
-  margin-left: 4%; }
-
-.bgmenu__accordion {
-  display: flex;
-  position: absolute;
-  height: 100%;
-  width: 80%;
-  left: 20%;
-  align-content: flex-end;
-  justify-content: flex-end; }
-
-.bgmenu_obj {
-  display: flex;
-  height: 100%; }
-
-.bgmenu__decor {
-  display: flex;
-  height: 100%;
-  width: 80px;
-  cursor: pointer;
-  flex-direction: column;
-  justify-content: flex-end;
-  position: relative; }
-  .bgmenu__decor p {
-    transform: rotate(180deg);
-    color: #ffffff;
-    font-family: 'Gagalin-Regular';
-    font-size: 40px;
-    font-weight: 400;
-    margin-bottom: 65%;
-    margin-right: 15%;
-    writing-mode: vertical-lr; }
-
-.meat {
-  background: url("../images/menu/meat_lovers.png") center center/cover no-repeat; }
-
-.vegan {
-  background: url("../images/menu/vegan.png") center center/cover no-repeat; }
-
-.diet {
-  background: url("../images/menu/diet.png") center center/cover no-repeat; }
-
-.bgmenu__desc {
-  display: flex;
-  height: 100%;
-  width: 0px;
-  background-color: #2f3234;
-  opacity: 0.9;
-  overflow: hidden;
-  border: 0; }
-  .bgmenu__desc p {
-    padding-top: 60px;
-    padding-left: 25px;
-    padding-right: 25px;
-    font-size: 14px;
-    color: #ffffff;
-    font-family: "Ubuntu";
-    font-weight: 300; }
-
-.active_bg {
-  width: 540px;
-  overflow: hidden; }
-
-/*# sourceMappingURL=burger_menu.css.map */
+Backtrace:
+C:\Users\mrfox\Documents\burger\style\parts\burger_menu.scss:101:in `tablets'
+C:\Users\mrfox\Documents\burger\style\parts\burger_menu.scss:101
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:352:in `block in visit_mixin'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/stack.rb:98:in `block in with_mixin'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/stack.rb:135:in `with_frame'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/stack.rb:98:in `with_mixin'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:350:in `visit_mixin'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/base.rb:36:in `visit'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:162:in `block in visit'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/stack.rb:79:in `block in with_base'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/stack.rb:135:in `with_frame'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/stack.rb:79:in `with_base'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:162:in `visit'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:444:in `block (2 levels) in visit_rule'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:444:in `map'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:444:in `block in visit_rule'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:183:in `with_environment'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:442:in `visit_rule'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/base.rb:36:in `visit'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:162:in `block in visit'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/stack.rb:79:in `block in with_base'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/stack.rb:135:in `with_frame'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/stack.rb:79:in `with_base'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:162:in `visit'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/base.rb:52:in `block in visit_children'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/base.rb:52:in `map'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/base.rb:52:in `visit_children'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:171:in `block in visit_children'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:183:in `with_environment'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:170:in `visit_children'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/base.rb:36:in `block in visit'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:190:in `visit_root'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/base.rb:36:in `visit'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:161:in `visit'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:10:in `visit'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/root_node.rb:36:in `css_tree'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/root_node.rb:29:in `render_with_sourcemap'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/engine.rb:389:in `_render_with_sourcemap'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/engine.rb:307:in `render_with_sourcemap'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/exec/sass_scss.rb:391:in `run'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/exec/sass_scss.rb:63:in `process_result'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/exec/base.rb:52:in `parse'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/exec/base.rb:19:in `parse!'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/bin/sass:13:in `<top (required)>'
+C:/Program Files (x86)/Koala/bin/sass:22:in `load'
+C:/Program Files (x86)/Koala/bin/sass:22:in `<main>'
+*/
+body:before {
+  white-space: pre;
+  font-family: monospace;
+  content: "Error: Undefined mixin 'tablets'.\A         on line 101 of C:\Users\mrfox\Documents\burger\style\parts\burger_menu.scss, in `tablets'\A         from line 101 of C:\Users\mrfox\Documents\burger\style\parts\burger_menu.scss\A \A 96: }\A 97: \A 98: .active_bg {\A 99:     width: torem(540px);\A 100:     overflow: hidden;\A 101:     @include tablets{\A 102:         width:torem(530px);\A 103:     }\A 104: \A 105:     @include phones{\A 106:         width:torem(240px);"; }
