--- a/style/parts/contacts.scss
+++ b/style/parts/contacts.scss
@@ -1,5 +1,5 @@
 .contacts {
-    background: url('/images/contacts/map_full.png') center center / cover no-repeat;
+    background: url('../images/contacts/map_full.png') center center / cover no-repeat;
     position: relative;
     display: flex;
     justify-content: space-around;
