--- a/fonts/style/parts/team.css
+++ b/fonts/style/parts/team.css
@@ -1,131 +1,69 @@
-.team {
-  background: url("../images/team/team.png") center center/cover no-repeat;
-  position: relative; }
+/*
+Error: Undefined mixin 'tablets'.
+        on line 16 of C:\Users\mrfox\Documents\burger\style\parts\team.scss, in `tablets'
+        from line 16 of C:\Users\mrfox\Documents\burger\style\parts\team.scss
 
-.team__menu {
-  position: absolute;
-  display: flex;
-  flex-direction: column;
-  width: 70%;
-  height: 100%;
-  left: 50%;
-  background-color: #2f3234;
-  opacity: 0.93;
-  margin: 0;
-  padding: 0;
-  content: '';
-  align-items: center;
-  justify-content: center; }
+11:     width: 50%;
+12:     background-color: #2f3234;
+13:     padding: torem(110px) torem(80px) torem(110px) torem(95px);
+14:     opacity: .93;
+15: 
+16:     @include tablets {
+17:         width: 100%;
+18:         display: flex;
+19:         flex-direction: column;
+20:         align-content: center;
+21:         justify-content: center;
 
-.team__desc {
-  display: flex;
-  align-items: top;
-  width: 70%;
-  margin-top: 17px;
-  margin-left: 10px;
-  margin-bottom: 0px;
-  height: 0px;
-  overflow: hidden;
-  animation-fill-mode: forwards;
-  -webkit-transition: height .4s linear, opacity .4s linear;
-  transition: height .4s linear, opacity .4s linear; }
-
-.team__h {
-  color: #f9b43b;
-  font-family: 'Gagalin-Regular';
-  font-size: 72px;
-  font-weight: 400; }
-
-.team__avtr {
-  width: 100px;
-  height: 100px;
-  border-radius: 50px;
-  margin-right: 10px; }
-
-.team__text {
-  font-family: "Ubuntu";
-  font-weight: 300;
-  color: #ffffff;
-  font-size: 14px; }
-
-.team__role {
-  font-weight: bold; }
-
-.team__label {
-  display: flex;
-  align-content: space-around;
-  align-items: center;
-  margin-bottom: 35px; }
-
-.team__input {
-  display: flex;
-  flex-direction: column;
-  align-content: flex-start;
-  text-align: start;
-  align-items: baseline; }
-
-input.team_inp {
-  display: none; }
-
-label.team_prt {
-  color: #ffffff;
-  font-family: 'Gagalin-Regular';
-  font-size: 14px;
-  font-weight: 400;
-  display: flex;
-  align-items: baseline;
-  cursor: pointer; }
-
-.arrow__team {
-  width: 0;
-  height: 0;
-  border-left: 6px solid transparent;
-  border-right: 6px solid transparent;
-  border-top: 6px solid #f9b43b;
-  margin-right: 10px;
-  animation-fill-mode: forwards; }
-
-div > input:checked ~ div > label.team_prt {
-  color: #f9b43b; }
-
-div > input:checked ~ .team__label {
-  margin-bottom: 0px; }
-
-div > input:checked ~ div > label.team_prt .arrow__team {
-  transition: 0.4ms;
-  animation-name: rotateit;
-  -webkit-animation-name: rotateit;
-  animation-duration: 0.4s; }
-
-input:checked ~ .team__desc {
-  height: 120px;
-  opacity: 1;
-  margin-bottom: 20px; }
-
-@keyframes rotateit {
-  from {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg); }
-  20% {
-    -webkit-transform: rotate(25deg);
-    transform: rotate(25deg); }
-  40% {
-    -webkit-transform: rotate(45deg);
-    transform: rotate(45deg); }
-  60% {
-    -webkit-transform: rotate(90deg);
-    transform: rotate(90deg); }
-  70% {
-    -webkit-transform: rotate(115deg);
-    transform: rotate(115deg); }
-  80% {
-    -webkit-transform: rotate(135deg);
-    transform: rotate(135deg); }
-  90% {
-    -webkit-transform: rotate(160deg);
-    transform: rotate(160deg); }
-  to {
-    -webkit-transform: rotate(180deg);
-    transform: rotate(180deg); } }
-
-/*# sourceMappingURL=team.css.map */
+Backtrace:
+C:\Users\mrfox\Documents\burger\style\parts\team.scss:16:in `tablets'
+C:\Users\mrfox\Documents\burger\style\parts\team.scss:16
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:352:in `block in visit_mixin'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/stack.rb:98:in `block in with_mixin'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/stack.rb:135:in `with_frame'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/stack.rb:98:in `with_mixin'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:350:in `visit_mixin'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/base.rb:36:in `visit'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:162:in `block in visit'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/stack.rb:79:in `block in with_base'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/stack.rb:135:in `with_frame'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/stack.rb:79:in `with_base'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:162:in `visit'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:444:in `block (2 levels) in visit_rule'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:444:in `map'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:444:in `block in visit_rule'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:183:in `with_environment'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:442:in `visit_rule'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/base.rb:36:in `visit'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:162:in `block in visit'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/stack.rb:79:in `block in with_base'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/stack.rb:135:in `with_frame'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/stack.rb:79:in `with_base'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:162:in `visit'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/base.rb:52:in `block in visit_children'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/base.rb:52:in `map'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/base.rb:52:in `visit_children'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:171:in `block in visit_children'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:183:in `with_environment'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:170:in `visit_children'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/base.rb:36:in `block in visit'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:190:in `visit_root'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/base.rb:36:in `visit'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:161:in `visit'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/visitors/perform.rb:10:in `visit'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/root_node.rb:36:in `css_tree'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/tree/root_node.rb:29:in `render_with_sourcemap'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/engine.rb:389:in `_render_with_sourcemap'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/engine.rb:307:in `render_with_sourcemap'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/exec/sass_scss.rb:391:in `run'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/exec/sass_scss.rb:63:in `process_result'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/exec/base.rb:52:in `parse'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/exec/base.rb:19:in `parse!'
+C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/bin/sass:13:in `<top (required)>'
+C:/Program Files (x86)/Koala/bin/sass:22:in `load'
+C:/Program Files (x86)/Koala/bin/sass:22:in `<main>'
+*/
+body:before {
+  white-space: pre;
+  font-family: monospace;
+  content: "Error: Undefined mixin 'tablets'.\A         on line 16 of C:\Users\mrfox\Documents\burger\style\parts\team.scss, in `tablets'\A         from line 16 of C:\Users\mrfox\Documents\burger\style\parts\team.scss\A \A 11:     width: 50%;\A 12:     background-color: #2f3234;\A 13:     padding: torem(110px) torem(80px) torem(110px) torem(95px);\A 14:     opacity: .93;\A 15: \A 16:     @include tablets {\A 17:         width: 100%;\A 18:         display: flex;\A 19:         flex-direction: column;\A 20:         align-content: center;\A 21:         justify-content: center;"; }
